0.1.0
 - new icon
 - Fixed Cover in FullScreenVideo OSD
 - Added images for next- and previous-page

0.0.1
 - initial release