@@ -18,4 +18,7 @@
     <string id="30111">480p</string>
     <string id="30112">720p</string>
     <string id="30113">1080p</string>
+    <string id="30120">Content-Type (Skin related)</string>
+    <string id="30121">Videos</string>
+    <string id="30122">Movies</string>
 </strings>
